--- a/cv.html
+++ b/cv.html
@@ -163,7 +163,7 @@
 	</div> <!--wrapper-->
 
 		<!-- JavaScript start -->
-			<script src='character.js'></script>
+			<!-- <script src='character.js'></script> -->
 			<script src='cv.js'></script>
 		<!-- JavaScript end -->
 
