--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 			<td>
 				<hr/>
-				<span>🇷🇪🇸🇸🇺🇲🇪 / 🇨🇻</span><br/>
-				<hr/>				
+				<!-- <span>🇷🇪🇸🇸🇺🇲🇪 / 🇨🇻</span><br/> -->
 				<span>Yaron kessler - Resume</span> <br/>
+				<hr/>				
 				<span>&phone; my-phone-number &phone; </span> <br/>
-				<address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address>
+				<address> 📧  &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
 				<hr/>
 			</td>
 		</tr>
