--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!-- links -->
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article -->
 
@@ -25,129 +22,135 @@
 	<!-- css end -->
 
 </head>
- 
+
 <body>
 
 	<div id="wrapper">
-	
-	<!-- <header> -->
+
+		<!-- <header> -->
 		<!-- <span id='title'>Yaron kessler - Resume</span> -->
 		<!-- <br/> -->
 		<!-- <span id='phone'>&phone; my-phone-number &phone; </span> -->
 		<!-- <br/> -->
 		<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
-	<!-- </header> -->
+		<!-- </header> -->
 
-	<nav id="hav">
+		<nav id="hav">
 
-	</nav>
+		</nav>
 
-	<main id="content">
+		<main id="content">
 
-	<table border="0" cellspacing="20">
-		<tr>
-			<td id="pic">
-				<img class="thick-green-border" src="./assets/images/jron.jpeg" width="120px" height="120"> 
-			</td>
-
-			<td>
-				<hr/>
-				<span>Yaron kessler - Resume</span> <br/>
-				<hr/>				
-				<span>&phone; my-phone-number &phone; </span> <br/>
-				<address> 📧  &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-				<hr/>
-			</td>
-		</tr>
-	</table>
-
-	<hr/>
-
-	<span><h3><u> Work expirence </u></h3></span>
-	<table border="0" cellspacing="10" >
-			<thead>
-				<th>years</th>
-				<th>expirence</th>	
-			</thead>
-			<tbody>
+			<table border="0" cellspacing="20">
 				<tr>
-					<td>2000-2001</td>
-					<td>ibm</td>
+					<td id="pic">
+						<img class="thick-green-border" src="./assets/images/jron.jpeg" width="120px" height="120">
+					</td>
+
+					<td>
+						<hr />
+						<span>Yaron kessler - Resume</span> <br />
+						<hr />
+						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
+						<address> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						<hr />
+					</td>
 				</tr>
-			</tbody>
-			<tfoot>
-				<th> Resume / Cv List </th>
-			</tfoot>
-	</table>
-	<br/>
-	
-	<hr/>
-	
-	<span><h3><u>Skills</u></h3></span>
+			</table>
 
-	<table cellspacing="10" width="100%">
-		<thead>
-			<th>Web</th>
-			<th>skils</th>
-		</thead>
-		<tr>
-			<td>Html(5)</td>
-			<td>★★★★☆</td>
-		</tr>
-		<tr>
-			<td>Css(3)</td>
-			<td>★★★★☆</td>
-		</tr>
-		<tr>
-			<td>Bootstrap(4)</td>
-			<td>★★★★☆</td>
-		</tr>
-		<tr>
-			<td>Java-script (js) </td>
-			<td>★★★★☆</td>
-		</tr>		
-		<tr>
-			<td>Jquery(3)</td>
-			<td>★★★★☆</td>
-		</tr>		
-		<tr>
-			<td>Ajax</td>
-			<td>★★★★☆</td>
-		</tr>		
-	</table>
-	<!-- Html(5) ★★★★☆  ❄ -->
-	<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
-	<!-- css, sass, less, stylus, jade, coffeescript-->
-	<!-- Java - Pure, Object Orianted, Design-Pattern, J2EE, Maven, Spring -->
+			<hr />
 
-	<hr/>
+			<span>
+				<h3><u> Work expirence </u></h3>
+			</span>
+			<table border="0" cellspacing="10">
+				<thead>
+					<th>years</th>
+					<th>expirence</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>2000-2001</td>
+						<td>ibm</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<th> Resume / Cv List </th>
+				</tfoot>
+			</table>
+			<br />
+
+			<hr />
+
+			<span>
+				<h3><u>Skills</u></h3>
+			</span>
+
+			<table cellspacing="10" width="100%">
+				<thead>
+					<th>Web</th>
+					<th>skils</th>
+				</thead>
+				<tr>
+					<td>Html(5)</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Css(3)</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Bootstrap(4)</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Java-script (js) </td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Jquery(3)</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Ajax</td>
+					<td>★★★★☆</td>
+				</tr>
+			</table>
+			<!-- Html(5) ★★★★☆  ❄ -->
+			<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
+			<!-- css, sass, less, stylus, jade, coffeescript-->
+			<!-- Java - Pure, Object Orianted, Design-Pattern, J2EE, Maven, Spring -->
+
+			<hr />
 
 
 
-		
-	</main>
+
+		</main>
 
 
-	<br/> <br/>	<br/> <br/> <br/> <br/>	<br/> <br/>
+		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
-	<footer> 
-		<!-- <span>Yaron kessler - Resume</span> -->
-		<span>&phone; my-phone-number &phone; </span>
-		<address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address>
-		<!-- <small>copyright 2014</small> -->
-	</footer>
+		<footer>
+			<address> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp;  📧 </address>
+			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
+			<!-- <span>Yaron kessler - Resume</span> -->
+			<!-- <span>&phone; my-phone-number &phone; </span> -->
+			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
+			<!-- <small>copyright 2014</small> -->
+		</footer>
 
 
-	</div> <!--wrapper-->
+	</div>
+	<!--wrapper-->
 
-		<!-- JavaScript start -->
-			<!-- <script src='character.js'></script> -->
-			<script src='cv.js'></script>
-		<!-- JavaScript end -->
+	<!-- JavaScript start -->
+	<!-- <script src='character.js'></script> -->
+	<script src='cv.js'></script>
+	<!-- JavaScript end -->
 
-	</body>
+</body>
 
 </html>
 
-
-
+<!-- https://dev.w3.org/html5/html-author/charref -->
