--- a/version/version-1/index.html
+++ b/version/version-1/index.html
@@ -1,6 +1,3 @@
-<!-- links -->
-<!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article -->
-
 
 <!DOCTYPE HTML>
 
@@ -12,28 +9,11 @@
 
 	<title>★★ CV ★★</title>
 
-	<!-- fonts start -->
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	<!-- fonts end -->
-
-	<!-- css start -->
-	<link rel="stylesheet" href="cv.css">
-	<!-- css end -->
-
 </head>
 
 <body>
 
 	<div id="wrapper">
-
-		<!-- <header> -->
-		<!-- <span id='title'>Yaron kessler - Resume</span> -->
-		<!-- <br/> -->
-		<!-- <span id='phone'>&phone; my-phone-number &phone; </span> -->
-		<!-- <br/> -->
-		<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
-		<!-- </header> -->
 
 		<nav id="hav">
 
@@ -44,14 +24,13 @@
 			<table border="0" cellspacing="20">
 				<tr>
 					<td id="pic">
-						<img class="thick-green-border" src="./assets/images/jron.jpeg" width="120px" height="120">
+						<img class="thick-green-border" src="../../assets/images/jron.jpeg" width="120px" height="120">
 					</td>
 
 					<td>
 						<hr />
 						<span>kessler Yaron - Resume</span> <br />
 						<hr />
-						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
 						<address> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
 						<hr />
 					</td>
@@ -83,14 +62,10 @@
 			<hr />
 
 			<span>
-				<h3><u>Skills</u></h3>
+				<h3><u>Client Web Skills</u></h3>
 			</span>
 
-			<table cellspacing="10" width="100%">
-				<thead>
-					<th>Web</th>
-					<th>skils</th>
-				</thead>
+			<table cellspacing="10"> <!-- width="100%" -->
 				<tr>
 					<td>Html(5)</td>
 					<td>★★★★☆</td>
@@ -116,6 +91,26 @@
 					<td>★★★★☆</td>
 				</tr>
 			</table>
+
+			<br/>
+			<span>
+				<h3><u>Java Skills</u></h3>
+			</span>			
+			<table cellspacing="10"> <!-- width="100%" -->
+				<tr>
+					<td>Java - Pure</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Object Orianted</td>
+					<td>★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Design-Pattern</td>
+					<td>★★★★☆</td>
+				</tr>
+			</table>
+
 			<!-- Html(5) ★★★★☆  ❄ -->
 			<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
 			<!-- css, sass, less, stylus, jade, coffeescript-->
@@ -123,32 +118,14 @@
 
 			<hr />
 
-
-
-
 		</main>
-
 
 		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
 		<footer>
-			<address> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp;  📧 </address>
-			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
-			<!-- <span>Yaron kessler - Resume</span> -->
-			<!-- <span>&phone; my-phone-number &phone; </span> -->
-			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
-			<!-- <small>copyright 2014</small> -->
+			<address> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp; 📧 </address>
 		</footer>
-
-
 	</div>
-	<!--wrapper-->
-
-	<!-- JavaScript start -->
-	<!-- <script src='character.js'></script> -->
-	<script src='cv.js'></script>
-	<!-- JavaScript end -->
-
 </body>
 
 </html>
