--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 					<td>
 						<hr />
-						<span>kessler Yaron - Resume</span> <br />
+						<span class="titlesMediumsize" >kessler Yaron - Resume</span> <br />
 						<hr />
 						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
-						<address> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
 						<hr />
 					</td>
 				</tr>
@@ -61,7 +61,7 @@
 			<hr />
 
 			<span>
-				<h3><u> Work expirence </u></h3>
+				<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
 			</span>
 			<table border="0" cellspacing="10">
 				<thead>
@@ -83,7 +83,7 @@
 			<hr />
 
 			<span>
-				<h3><u>Skills</u></h3>
+				<h3 class="titlesMediumsize"><u>Skills</u></h3>
 			</span>
 
 			<table cellspacing="10" width="100%">
@@ -132,7 +132,7 @@
 		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
 		<footer>
-			<address> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp;  📧 </address>
+			<address class="textEmail"> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp;  📧 </address>
 			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
 			<!-- <span>Yaron kessler - Resume</span> -->
 			<!-- <span>&phone; my-phone-number &phone; </span> -->
