--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 			<table border="0" cellspacing="20">
 				<tr>
 					<td id="pic">
-						<img class="thick-green-border" src="./assets/images/jron.jpeg" width="120px" height="120">
+						<img class="thick-green-border" src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px" height="120">
+						<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
+						<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
+						<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
+						<!-- src="./assets/images/jron.jpeg" -->
 					</td>
 
 					<td>
