--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
 				</thead>
 				<tr>
 					<td>Html(5)</td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 				<tr>
 					<td>Css(3)</td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 				<tr>
 					<td>Bootstrap(4)</td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 				<tr>
 					<td>Java-script (js) </td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 				<tr>
 					<td>Jquery(3)</td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 				<tr>
 					<td>Ajax</td>
-					<td>★★★★☆</td>
+					<td class="starShine">★★★★☆</td>
 				</tr>
 			</table>
 			<!-- Html(5) ★★★★☆  ❄ -->
