--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 		<main id="content">
 
+				<span class="blkTest">			
 			<table border="0" cellspacing="20">
 				<tr>
 					<td id="pic">
@@ -52,16 +53,19 @@
 					</td>
 
 					<td>
-						<hr />
+
+						<!-- <hr /> -->
 						<span class="titlesMediumsize" >kessler Yaron - Resume</span> <br />
-						<hr />
+						<!-- <hr /> -->
 						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
 						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-						<hr />
+						<!-- <hr /> -->
+
 					</td>
 				</tr>
 			</table>
-
+		</span>
+		
 			<hr />
 
 			<span>
