--- a/index.html
+++ b/index.html
@@ -41,32 +41,34 @@
 
 		<main id="content">
 
-				<span class="blkTest">			
-			<table border="0" cellspacing="20">
-				<tr>
-					<td id="pic">
-						<img class="thick-green-border" src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px" height="120">
-						<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
-						<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
-						<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
-						<!-- src="./assets/images/jron.jpeg" -->
-					</td>
+			<span class="blkTest">
+				<table border="0" cellspacing="20">
+					<tr>
+						<td id="pic">
+							<img class="thick-green-border"
+								src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px"
+								height="120">
+							<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
+							<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
+							<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
+							<!-- src="./assets/images/jron.jpeg" -->
+						</td>
 
-					<td>
+						<td>
 
-						<!-- <hr /> -->
-						<span class="titlesMediumsize" >kessler Yaron - Resume</span> <br />
-						<!-- <hr /> -->
-						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
-						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-						<!-- <hr /> -->
+							<!-- <hr /> -->
+							<span class="titlesMediumsize">kessler Yaron - Resume</span> <br />
+							<!-- <hr /> -->
+							<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
+							<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+							<!-- <hr /> -->
 
-					</td>
-				</tr>
-			</table>
-		</span>
-		
-			<hr />
+						</td>
+					</tr>
+				</table>
+			</span>
+
+			<!-- <hr width="30%"/> -->
 
 			<span>
 				<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
@@ -140,7 +142,8 @@
 		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
 		<footer>
-			<address class="textEmail"> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp;  📧 </address>
+			<address class="textEmail"> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp; 📧
+			</address>
 			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
 			<!-- <span>Yaron kessler - Resume</span> -->
 			<!-- <span>&phone; my-phone-number &phone; </span> -->
