--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 		<main id="content">
 
-			<span class="blkTest">
+			<span class="headBlock">
 				<table border="0" cellspacing="20">
 					<tr>
-						<td id="pic">
+						<td id="pic"> 
 							<img class="thick-green-border"
 								src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px"
 								height="120">
