--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 		</nav>
 
 		<main id="content">
+		
+			<span id="showTime" class="centerIt"></span>
 
-			<span class="headBlock">
-				<table border="0" cellspacing="20">
+			<span class="showTime">
+				<table border="1" cellspacing="20">
 					<tr>
 						<td id="pic"> 
 							<img class="thick-green-border"
@@ -66,6 +68,8 @@
 						</td>
 					</tr>
 				</table>
+
+			
 			</span>
 
 			<!-- <hr width="30%"/> -->
