--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 	<meta charset="UTF-8">
 
-	<title>★★ CV ★★</title>
+	<title>★★CV★★</title>
+
+	<!-- meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- fonts start -->
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
@@ -25,123 +28,110 @@
 
 <body>
 
+	<div id="toolbar">
+		<div>
+			<span id="showTime"></span>
+		</div>
+	</div>
+
 	<div id="wrapper">
 
-		<!-- <header> -->
-		<!-- <span id='title'>Yaron kessler - Resume</span> -->
-		<!-- <br/> -->
-		<!-- <span id='phone'>&phone; my-phone-number &phone; </span> -->
-		<!-- <br/> -->
-		<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
-		<!-- </header> -->
-
-		<nav id="hav">
-
-		</nav>
-
-		<main id="content">
-		
-			<span id="showTime" class="centerIt"></span>
-
-			<span class="showTime">
-				<table border="1" cellspacing="20">
-					<tr>
-						<td id="pic"> 
-							<img class="thick-green-border"
-								src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px"
-								height="120">
-							<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
-							<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
-							<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
-							<!-- src="./assets/images/jron.jpeg" -->
-						</td>
-
-						<td>
-
-							<!-- <hr /> -->
-							<span class="titlesMediumsize">kessler Yaron - Resume</span> <br />
-							<!-- <hr /> -->
-							<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
-							<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-							<!-- <hr /> -->
-
-						</td>
-					</tr>
-				</table>
-
-			
-			</span>
-
-			<!-- <hr width="30%"/> -->
-
-			<span>
-				<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
-			</span>
-			<table border="0" cellspacing="10">
-				<thead>
-					<th>years</th>
-					<th>expirence</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>2000-2001</td>
-						<td>ibm</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<th> Resume / Cv List </th>
-				</tfoot>
-			</table>
-			<br />
-
-			<hr />
-
-			<span>
-				<h3 class="titlesMediumsize"><u>Skills</u></h3>
-			</span>
-
-			<table cellspacing="10" width="100%">
-				<thead>
-					<th>Web</th>
-					<th>skils</th>
-				</thead>
+		<div class="responsiveTitle">
+			<table border="1" cellspacing="20" width="100%" class="titleTable">
 				<tr>
-					<td>Html(5)</td>
-					<td class="starShine">★★★★☆</td>
-				</tr>
-				<tr>
-					<td>Css(3)</td>
-					<td class="starShine">★★★★☆</td>
-				</tr>
-				<tr>
-					<td>Bootstrap(4)</td>
-					<td class="starShine">★★★★☆</td>
-				</tr>
-				<tr>
-					<td>Java-script (js) </td>
-					<td class="starShine">★★★★☆</td>
-				</tr>
-				<tr>
-					<td>Jquery(3)</td>
-					<td class="starShine">★★★★☆</td>
-				</tr>
-				<tr>
-					<td>Ajax</td>
-					<td class="starShine">★★★★☆</td>
+					<td id="myPic">
+						<!-- <img class="thick-green-border"
+							src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px"
+							height="120"> -->
+						<span class="autoSize">
+						<img class="thick-green-border"
+							src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" 
+							>
+						</span>
+						<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
+						<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
+						<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
+						<!-- src="./assets/images/jron.jpeg" -->
+					</td>
+
+					<td id="myId">
+
+						<!-- <hr /> -->
+						<span class="titlesMediumsize">kessler Yaron - Resume</span> <br />
+						<!-- <hr /> -->
+						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
+						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						<!-- <hr /> -->
+
+					</td>
 				</tr>
 			</table>
-			<!-- Html(5) ★★★★☆  ❄ -->
-			<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
-			<!-- css, sass, less, stylus, jade, coffeescript-->
-			<!-- Java - Pure, Object Orianted, Design-Pattern, J2EE, Maven, Spring -->
+		</div>
 
-			<hr />
+		<!-- <hr width="30%"/> -->
 
+		<span>
+			<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
+		</span>
+		<table border="0" cellspacing="10">
+			<thead>
+				<th>years</th>
+				<th>expirence</th>
+			</thead>
+			<tbody>
+				<tr>
+					<td>2000-2001</td>
+					<td>ibm</td>
+				</tr>
+			</tbody>
+			<tfoot>
+				<th> Resume / Cv List </th>
+			</tfoot>
+		</table>
+		<br />
 
+		<hr />
 
+		<span>
+			<h3 class="titlesMediumsize"><u>Skills</u></h3>
+		</span>
 
-		</main>
+		<table cellspacing="10" width="100%">
+			<thead>
+				<th>Web</th>
+				<th>skils</th>
+			</thead>
+			<tr>
+				<td>Html(5)</td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+			<tr>
+				<td>Css(3)</td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+			<tr>
+				<td>Bootstrap(4)</td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+			<tr>
+				<td>Java-script (js) </td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+			<tr>
+				<td>Jquery(3)</td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+			<tr>
+				<td>Ajax</td>
+				<td class="starShine">★★★★☆</td>
+			</tr>
+		</table>
+		<!-- Html(5) ★★★★☆  ❄ -->
+		<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
+		<!-- css, sass, less, stylus, jade, coffeescript-->
+		<!-- Java - Pure, Object Orianted, Design-Pattern, J2EE, Maven, Spring -->
 
+		<hr />
 
 		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
