--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
 
 <body>
 
-	<div id="toolbar">
-		<div>
-			<span id="showTime"></span>
-		</div>
-	</div>
 
 	<div id="wrapper">
 
+		<div id="toolbar">
+			<span id="showTime"></span>
+		</div>
+
 		<div class="responsiveTitle">
-			<table border="1" cellspacing="20" width="100%" class="titleTable">
+			<table border="1" class="titleTable">
 				<tr>
 					<td id="myPic">
 						<!-- <img class="thick-green-border"
@@ -45,7 +44,7 @@
 							height="120"> -->
 						<span class="autoSize">
 						<img class="thick-green-border"
-							src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" 
+							src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.300px.jpeg" 
 							>
 						</span>
 						<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
@@ -70,10 +69,12 @@
 
 		<!-- <hr width="30%"/> -->
 
-		<span>
+		<div class="testClass">
 			<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
-		</span>
-		<table border="0" cellspacing="10">
+		</div>
+
+		<div class="testClass">
+		<table border="1" cellspacing="10">
 			<thead>
 				<th>years</th>
 				<th>expirence</th>
@@ -88,14 +89,16 @@
 				<th> Resume / Cv List </th>
 			</tfoot>
 		</table>
+		</div>
+
 		<br />
 
 		<hr />
 
-		<span>
+		<div class="testClass">
 			<h3 class="titlesMediumsize"><u>Skills</u></h3>
-		</span>
-
+		</div>
+		<div class="testClass">
 		<table cellspacing="10" width="100%">
 			<thead>
 				<th>Web</th>
@@ -126,6 +129,7 @@
 				<td class="starShine">★★★★☆</td>
 			</tr>
 		</table>
+		</div>
 		<!-- Html(5) ★★★★☆  ❄ -->
 		<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
 		<!-- css, sass, less, stylus, jade, coffeescript-->
@@ -147,6 +151,8 @@
 
 
 	</div>
+
+</div>	
 	<!--wrapper-->
 
 	<!-- JavaScript start -->
@@ -154,7 +160,8 @@
 	<script src='cv.js'></script>
 	<!-- JavaScript end -->
 
-</body>
+
+</body> 
 
 </html>
 
