--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 
 	<div id="wrapper">
+		
+		<div class="titleResume">
+			<span>yaron.kessler resume/cv</span>
+		</div>
 
 		<div id="toolbar">
 			<span id="showTime"></span>
@@ -52,7 +56,7 @@
 						<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
 						<!-- src="./assets/images/jron.jpeg" -->
 					</td>
-
+				</tr>
 					<td id="myId">
 
 						<!-- <hr /> -->
