--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="wrapper">
 		
 		<div class="titleResume">
-			<span>yaron.kessler resume/cv</span>
+			<span>Kessler Yaron <br/> resume/cv</span>
 		</div>
 
 		<div id="toolbar">
@@ -43,29 +43,21 @@
 			<table border="1" class="titleTable">
 				<tr>
 					<td id="myPic">
-						<!-- <img class="thick-green-border"
-							src="https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg" width="120px"
-							height="120"> -->
+
 						<span class="autoSize">
 						<img class="thick-green-border"
 							src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" 
 							>
 						</span>
-						<!-- https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.jpeg -->
-						<!-- https://ofekbytes.github.io/resume/assets/images/jron.jpeg -->
-						<!-- https://ofekbytes.github.io/resume/assets/images/kessler.yaron.jpeg -->
-						<!-- src="./assets/images/jron.jpeg" -->
-					</td>
+						</td>
 				</tr>
 					<td id="myId">
-
 						<!-- <hr /> -->
-						<span class="titlesMediumsize">kessler Yaron - Resume</span> <br />
+						<span class="titlesMediumsize">kessler Yaron - Resume (cv</span> <br />
 						<!-- <hr /> -->
 						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
 						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
 						<!-- <hr /> -->
-
 					</td>
 				</tr>
 			</table>
