--- a/index.html
+++ b/index.html
@@ -50,18 +50,13 @@
 						</td>
 				</tr>
 					<td id="myId">
-						<!-- <hr /> -->
-						<span class="titlesMediumsize">kessler Yaron - Resume (cv</span> <br />
-						<!-- <hr /> -->
-						<!-- <span>&phone; my-phone-number &phone; </span> <br/> -->
-						<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-						<!-- <hr /> -->
-						Name: Kessler Yaron
-						Status: Married + 2
-						Residence: Israel, Holon.
-						<br />
-						A father,husband ,friend. Developer. music lover.
-						
+						Resume/cv
+						<br/>Name: Kessler Yaron
+						<br/>Status: Married + 2
+						<br/>Residence: Israel, Holon.
+						<br/><address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						<br/>I am a Father, Husband ,Friend. Developer. Music lover.
+
 					</td>
 				</tr>
 			</table>
