--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 	<div id="wrapper">
-		
+
 		<div id="toolbar">
 			<span id="showTime"></span>
 		</div>
@@ -43,26 +43,34 @@
 					<td id="myPic">
 
 						<span class="autoSize">
-						<!-- <img class="thick-green-border" -->
+							<!-- <img class="thick-green-border" -->
 							<!-- src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" > -->
-							
+
 							<picture>
-									<source srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.100px.jpeg" media="(max-width: 600px)">
-									<source srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" media="(max-width: 1500px)">
-									<source srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.300px.jpeg">
-									<img src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" alt="Flowers" style="width:auto;">
-						  </picture>
+								<source
+									srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.100px.jpeg"
+									media="(max-width: 600px)">
+								<source
+									srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg"
+									media="(max-width: 1500px)">
+								<source
+									srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.300px.jpeg">
+								<img src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg"
+									alt="Flowers" style="width:auto;">
+							</picture>
 
 						</span>
-						</td>
-				</tr>
+					</td>
+					<!-- </tr> -->
 					<td id="myId">
-						Resume/cv
-						<br/>Name: Kessler Yaron
-						<br/>Status: Married + 2
-						<br/>Residence: Israel, Holon.
-						<br/><address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
-						<br/>I am a Father, Husband ,Friend. Developer. Music lover.
+						<span>Resume/cv</span>
+						<br /><span>Name: </span> <span> Kessler Yaron</span>
+						<br /><span>Status: Married + 2</span>
+						<br /><span>Residence: Israel, Holon.</span>
+						<br /><span>
+							<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						</span>
+						<br /><span>I am a Father, Husband ,Friend. Developer. Music lover.</span>
 
 					</td>
 				</tr>
@@ -76,21 +84,21 @@
 		</div>
 
 		<div class="testClass">
-		<table border="1" cellspacing="10">
-			<thead>
-				<th>years</th>
-				<th>expirence</th>
-			</thead>
-			<tbody>
-				<tr>
-					<td>2000-2001</td>
-					<td>ibm</td>
-				</tr>
-			</tbody>
-			<tfoot>
-				<th> Resume / Cv List </th>
-			</tfoot>
-		</table>
+			<table border="1" cellspacing="10">
+				<thead>
+					<th>years</th>
+					<th>expirence</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>2000-2001</td>
+						<td>ibm</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<th> Resume / Cv List </th>
+				</tfoot>
+			</table>
 		</div>
 
 		<br />
@@ -101,36 +109,36 @@
 			<h3 class="titlesMediumsize"><u>Skills</u></h3>
 		</div>
 		<div class="testClass">
-		<table cellspacing="10" width="100%">
-			<thead>
-				<th>Web</th>
-				<th>skils</th>
-			</thead>
-			<tr>
-				<td>Html(5)</td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-			<tr>
-				<td>Css(3)</td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-			<tr>
-				<td>Bootstrap(4)</td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-			<tr>
-				<td>Java-script (js) </td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-			<tr>
-				<td>Jquery(3)</td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-			<tr>
-				<td>Ajax</td>
-				<td class="starShine">★★★★☆</td>
-			</tr>
-		</table>
+			<table cellspacing="10" width="100%">
+				<thead>
+					<th>Web</th>
+					<th>skils</th>
+				</thead>
+				<tr>
+					<td>Html(5)</td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Css(3)</td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Bootstrap(4)</td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Java-script (js) </td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Jquery(3)</td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+				<tr>
+					<td>Ajax</td>
+					<td class="starShine">★★★★☆</td>
+				</tr>
+			</table>
 		</div>
 		<!-- Html(5) ★★★★☆  ❄ -->
 		<!-- Html(5), Css(3) Bootstrap(4), Java-script, Jquery, Ajax, AnuglarJs, Anuglar 7 -->
@@ -154,7 +162,7 @@
 
 	</div>
 
-</div>	
+	</div>
 	<!--wrapper-->
 
 	<!-- JavaScript start -->
@@ -163,7 +171,7 @@
 	<!-- JavaScript end -->
 
 
-</body> 
+</body>
 
 </html>
 
