--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 					</td>
 					<!-- </tr> -->
 					<td id="myId">
-						<span>Resume/cv</span>
-						<br /><span>Name: </span> <span> Kessler Yaron</span>
+						<!-- <span>Resume/cv</span> -->
+						<!-- <br /> -->
+						<span>Name: </span> <span> Kessler Yaron</span>
 						<br /><span>Status: Married + 2</span>
 						<br /><span>Residence: Israel, Holon.</span>
 						<br /><span>
