--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<br /><span>
 							<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
 						</span>
-						<br /><span>I am a Father, Husband ,Friend. Developer. Music lover.</span>
+						
 
 					</td>
 				</tr>
@@ -80,6 +80,9 @@
 
 		<!-- <hr width="30%"/> -->
 
+		<div>
+			<div><span>I am a Father, Husband ,Friend. Developer. Music lover.</span></div>
+		</div>
 		<div class="testClass">
 			<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
 		</div>
