--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
 		<div id="toolbar">
 			<span id="showTime"></span>
 		</div>
+		<br/>
+
 		<div class="titleResume">
 			<span>Kessler Yaron resume (cv) </span>
 		</div>
+		
+		<hr/>
 		<div class="responsiveTitle" >
 			<table border="0" class="titleTable">
 				<tr>
@@ -68,8 +72,8 @@
 						<span>Name: </span> <span> Kessler Yaron</span>
 						<br /><span>Status: Married + 2</span>
 						<br /><span>Residence: Israel, Holon.</span>
-						<br /><span>
-							<address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address>
+						<!-- <br /><span> -->
+							<!-- <address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address> -->
 						</span>
 						
 
@@ -79,14 +83,19 @@
 		</div>
 
 		<!-- <hr width="30%"/> -->
-
+		<hr/>
 		<div>
-			<div><span>I am a Father, Husband ,Friend. Developer. Music lover.</span></div>
+			<div class="fontNormal"> <span>I am a Father, Husband ,Friend. Developer. Music lover.</span></div>
 		</div>
+		
+		<br/>
+		<hr/>
 		<div class="testClass">
 			<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
 		</div>
 
+		<br/>
+		<hr/>
 		<div class="testClass">
 			<table border="0" cellspacing="10">
 				<thead>
