--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 					<td id="myPic">
 
 						<span class="autoSize">
-							<!-- <img class="thick-green-border" -->
-							<!-- src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" > -->
-
+							
+							<!-- move the picture section to  css file. -->
 							<picture>
 								<source
 									srcset="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.100px.jpeg"
