--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<!-- fonts end -->
 
 	<!-- css start -->
-	<link rel="stylesheet" href="cv.css">
+	<link rel="stylesheet" href="cv.pc.css">
+	<link rel="stylesheet" href="cv.tablet.css">
+	<link rel="stylesheet" href="cv.phone.css">
 	<!-- css end -->
 
 </head>
@@ -162,7 +164,7 @@
 		<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
 		<footer>
-			<address class="textEmail"> 📧 &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp; 📧
+			<address class="textEmail"> Email: &nbsp; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &nbsp; 📧
 			</address>
 			<!-- <address> &rarr; &lpar; &nbsp; yaron.kessler41@gmail.com &nbsp; &rpar; &larr;</address> -->
 			<!-- <span>Yaron kessler - Resume</span> -->
