--- a/backup/01/index.html
+++ b/backup/01/index.html
@@ -16,8 +16,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- fonts start -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<!-- fonts end -->
 
 	<!-- css start -->
