--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 					<td id="myId">
 						<!-- <span>Resume/cv</span> -->
 						<!-- <br /> -->
-						<span>Name: </span> <span> Kessler Yaron</span>
-						<br /><span>Status: Married + 2</span>
-						<br /><span>Residence: Israel, Holon.</span>
+						<span class="keyColor"> Name: </span> <span class="valueColor"> Kessler Yaron</span>
+						<br /><span class="keyColor"> Status: </span> <span class="valueColor">Married + 2</span>
+						<br /><span class="keyColor"> Residence: </span> <span class="valueColor">Israel, Holon.</span>
 						<!-- <br /><span> -->
 							<!-- <address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address> -->
 						</span>
