--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 		<div id="toolbar">
 			<span id="showTime"></span>
 		</div>
-		<br/>
+		<br />
 
 		<div class="titleResume">
 			<span>Kessler Yaron resume (cv) </span>
 		</div>
-		
-		<hr/>
-		<div class="responsiveTitle" >
+
+		<hr />
+		<div class="responsiveTitle">
 			<table border="0" class="titleTable">
 				<tr>
 					<td id="myPic">
 
 						<span class="autoSize">
-							
+
 							<!-- move the picture section to  css file. -->
 							<picture>
 								<source
@@ -74,9 +74,9 @@
 						<br /><span class="keyColor"> Status: </span> <span class="valueColor">Married + 2</span>
 						<br /><span class="keyColor"> Residence: </span> <span class="valueColor">Israel, Holon.</span>
 						<!-- <br /><span> -->
-							<!-- <address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address> -->
+						<!-- <address class="textEmail"> 📧 &nbsp; yaron.kessler41@gmail.com &nbsp; 📧 </address> -->
 						</span>
-						
+
 
 					</td>
 				</tr>
@@ -84,29 +84,46 @@
 		</div>
 
 		<!-- <hr width="30%"/> -->
-		<hr/>
+		<hr />
 		<div>
-			<div class="fontNormal"> <span>I am a Father, Husband ,Friend. Developer. Music lover.</span></div>
+			<div class="fontNormal"> <span>I am a Father, Husband ,Friend. Developer.</span></div>
 		</div>
-		
-		<br/>
-		<hr/>
+
+		<br />
+		<hr />
 		<div class="testClass">
 			<h3 class="titlesMediumsize"><u> Work expirence </u></h3>
 		</div>
 
-		<br/>
-		<hr/>
+		<br />
+		<hr />
 		<div class="testClass">
-			<table border="0" cellspacing="10">
+			<table border="0" cellspacing="10" >
 				<thead>
 					<th>years</th>
 					<th>expirence</th>
+					<td>total years</td>
 				</thead>
 				<tbody>
 					<tr>
-						<td>2000-2001</td>
-						<td>ibm</td>
+						<td>2017 - 2019</td>
+						<td>Brinks Company</td>
+						<td>1.5 years</td>
+					</tr>
+					<tr>
+						<td>2001 - 2017</td>
+						<td>ISRACARD Company</td>
+						<td>16 years</td>
+					</tr>
+					<tr>
+						<td>1997 - 2001</td>
+						<td>IBM/IGS Company</td>
+						<td>4 years</td>
+					</tr>
+					<tr>
+						<td>1992 - 1995</td>
+						<td>Military service</td>
+						<td>3 years</td>
 					</tr>
 				</tbody>
 				<tfoot>
