--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 						<td>3 years</td>
 					</tr>
 				</tbody>
-				<tfoot>
+				<!-- <tfoot>
 					<th> Resume / Cv List </th>
-				</tfoot>
+				</tfoot> -->
 			</table>
 		</div>
 
