--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<br />
 
 		<div class="titleResume">
-			<span>Kessler Yaron resume (cv) </span>
+			<span> Kessler Yaron resume-cv </span>
 		</div>
 
 		<hr />
