--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="cv.pc.css">
 	<link rel="stylesheet" href="cv.tablet.css">
 	<link rel="stylesheet" href="cv.phone.css">
+	<!-- <link rel="icon" href="favicon.ico"> -->
 	<!-- css end -->
 
 </head>
