--- a/delete/index-responsive.html
+++ b/delete/index-responsive.html
@@ -44,7 +44,7 @@
 
 						<span class="autoSize">
 						<img class="thick-green-border"
-							src="https://ofekbytes.github.io/assets/kessler.yaron/kessler.yaron.200px.jpeg" 
+							src="https://ofekbytes.github.io/assets/jaron/jaron.200px.jpeg" 
 							>
 						</span>
 						</td>
