--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 	<!-- JavaScript start -->
 	<!-- <script src='character.js'></script> -->
-	<script src='cv.js'></script>
+	<script src='jaron/cv.js'></script>
 	<!-- JavaScript end -->
 
 
