--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<!-- fonts end -->
 
 	<!-- css start -->
-	<link rel="stylesheet" href="cv.pc.css">
-	<link rel="stylesheet" href="cv.tablet.css">
-	<link rel="stylesheet" href="cv.phone.css">
+	<link rel="stylesheet" href="jaron/cv.pc.css">
+	<link rel="stylesheet" href="jaron/cv.tablet.css">
+	<link rel="stylesheet" href="jaron/cv.phone.css">
 	<!-- <link rel="icon" href="favicon.ico"> -->
 	<!-- css end -->
 
